--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/KanbanizePHP"]
-	path = lib/KanbanizePHP
+	path = lib/EtuDev/KanbanizePHP
 	url = https://github.com/middlebury/KanbanizePHP.git
