Add a bunch of filters: board, author, not-author, assignee.

--- a/config.php.example
+++ b/config.php.example
@@ -14,4 +14,8 @@ $config['SLACK_ORGS']['my_org']['DESTINATIONS'] = array(
     'FILTER_CLASS' => 'Slack_Filter_Everything',
     'FILTER_ARGS' => array(),
   ),
+  '@username' => array(
+    'FILTER_CLASS' => 'Slack_Filter_NotAuthor',
+    'FILTER_ARGS' => array('username'),
+  )
 );
